# HEO-Precision-Assist

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/ core/: metrics.py  signal_engine.py
src/assist/: mouse_stabilizer.py
src/capture/: mouse_capture.py
src/core/: metrics.py  signal_engine.py
src/integrations/: jarvis_cli_bridge.py
src/ui/: cli.py
tests/: test_metrics.py
